添加百度资源收录

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vuepress dev docs",
     "build": "node ./docs/.vuepress/builds/addMarkDownIfNotExist.js && vuepress build docs",
-    "delcomment": "node ./docs/.vuepress/builds/delMarkdown.js"
+    "addcomponent": "node ./docs/.vuepress/builds/addMarkDownIfNotExist.js",
+    "delcomponent": "node ./docs/.vuepress/builds/delMarkdown.js"
   },
   "keywords": [],
   "author": "MeiDL",
